tests/rosetta/out/Smalltalk/case-sensitivity-of-identifiers.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| main pkg_dog Dog pkg_DOG packageSees d dog DOG |
main := [ pkg_dog := 'Salt'.
Dog := 'Pepper'.
pkg_DOG := 'Mustard'.
packageSees := [:d1 :d2 :d3 | Transcript show: ((((((((((('Package sees: ') + d1)) + (' '))) + d2)) + (' '))) + d3)) printString; cr.
Dictionary from:{'pkg_dog'->true. 'Dog'->true. 'pkg_DOG'->true}. ].
d := packageSees value: pkg_dog value: Dog value: pkg_DOG.
Transcript show: ((((('There are ') + (((d size) asString)))) + (' dogs.
'))) printString; cr.
dog := 'Benjamin'.
d := packageSees value: pkg_dog value: Dog value: pkg_DOG.
Transcript show: ((((((((((('Main sees:   ') + dog)) + (' '))) + Dog)) + (' '))) + pkg_DOG)) printString; cr.
d at: 'dog' put: true.
d at: 'Dog' put: true.
d at: 'pkg_DOG' put: true.
Transcript show: ((((('There are ') + (((d size) asString)))) + (' dogs.
'))) printString; cr.
Dog := 'Samba'.
d := packageSees value: pkg_dog value: Dog value: pkg_DOG.
Transcript show: ((((((((((('Main sees:   ') + dog)) + (' '))) + Dog)) + (' '))) + pkg_DOG)) printString; cr.
d at: 'dog' put: true.
d at: 'Dog' put: true.
d at: 'pkg_DOG' put: true.
Transcript show: ((((('There are ') + (((d size) asString)))) + (' dogs.
'))) printString; cr.
DOG := 'Bernie'.
d := packageSees value: pkg_dog value: Dog value: pkg_DOG.
Transcript show: ((((((((((('Main sees:   ') + dog)) + (' '))) + Dog)) + (' '))) + DOG)) printString; cr.
d at: 'dog' put: true.
d at: 'Dog' put: true.
d at: 'pkg_DOG' put: true.
d at: 'DOG' put: true.
Transcript show: ((((('There are ') + (((d size) asString)))) + (' dogs.'))) printString; cr. ].
main value.
